Fix text becoming invisible in HTML editor (#755)
* Replace ScrollView with View

This is done to fix the issue of text becoming invisible when content height is too long

* Handle pan gesture to dismiss keyboard

* Add inline comment

* Put platform check for keyboard hide

* Restrict pan gesture with iOS

* Do some layout fixes

* Remove unnecessary lines

* Remove unused textInput decleration

--- a/src/components/html-text-input.scss
+++ b/src/components/html-text-input.scss
@@ -1,12 +1,13 @@
 /** @format */
 
+$title-height: 32;
+
 .htmlView {
 	font-family: $default-monospace-font;
 	background-color: white;
 	padding-left: 8;
 	padding-right: 8;
-	padding-top: 8;
-	padding-bottom: 8;
+	padding-bottom: $title-height + 8;
 }
 
 .htmlViewTitle {
@@ -16,6 +17,8 @@
 	padding-right: 8;
 	padding-top: 8;
 	padding-bottom: 8;
+	height: $title-height;
+	
 }
 
 .container {
